# skyeng-words-exporter

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  words.rs  wordsets.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_table_words.rs  m20220619_130453_create_wordset.rs  m20220619_193726_unexported_words.rs
src/: cli.rs  client.rs  db.rs  error.rs  export.rs  lib.rs  main.rs  models.rs  sync.rs
src/client/: client.rs  mod.rs  models.rs
