[package]
name = "skyeng-words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"]}
scraper = "0.12.0"
anyhow = { version = "1", features = ["backtrace"] }
url = "2.2"
form_urlencoded = "1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
once_cell = "1.12.0"
thiserror = "1.0.31"
