[workspace]
members = [".", "entity", "migration"]


[package]
name = "skyeng-words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = {path="migration"}
entity = {path="entity"}
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"]}
scraper = "0.12.0"
anyhow = { version = "1", features = ["backtrace"] }
url = "2.2"
form_urlencoded = "1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
once_cell = "1.12.0"
thiserror = "1.0.31"
sea-orm = { version = "0.8.0", features = ["sqlx-sqlite", "debug-print", "runtime-tokio-native-tls"] }
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2.5", features = ["derive", "env"] }
xlsxwriter = "0.3.5"
dotenv = "0.15.0"
